--- a/variables.scss
+++ b/variables.scss
@@ -5,7 +5,9 @@ $medium-size: 22px;
 $large-size: 42px;
 $xlarge-size: 100px;
 
+// For normal rendering
 $max-width: 1300px;
+$min-width: 630px;
 
 $dark: #111827;
 $muted: grey;
