--- a/index.scss
+++ b/index.scss
@@ -39,6 +39,9 @@ vr {
     padding-top: $xlarge-size;
     padding-bottom: $large-size;
 
+    padding-left: $medium-size;
+    padding-right: $medium-size;
+
     .footer-text {
         display: inline-block;
     
