--- a/headers.scss
+++ b/headers.scss
@@ -169,7 +169,7 @@
             }
 
             height: 60%;
-            max-height: 60px;
+            max-height: $large-size;
             margin-top: $normal-size;
         }
 
