--- a/index.css
+++ b/index.css
@@ -142,6 +142,7 @@
 .subheader .utility-bar__logo {
   display: none;
   height: 60%;
+  max-height: 42px;
   margin-top: 15px;
 }
 @media only screen and (max-width: 1000px) {
