--- a/purchased.scss
+++ b/purchased.scss
@@ -15,6 +15,11 @@
             column-gap: 10%;
             grid-template-columns: 45% [col-start] 45% [col-start];
         }
+
+        @include tinyScreen() {
+            column-gap: 10%;
+            grid-template-columns: 90% [col-start];
+        }
     }
 
     .purchase-text {
