--- a/headers.scss
+++ b/headers.scss
@@ -144,6 +144,7 @@
                 height: 24px;
 
                 @include smallScreen() {
+                    padding-top: $small-size;
                     margin: $small-size;
                 }
             }
@@ -192,7 +193,8 @@
                 height: 24px;
 
                 @include smallScreen() {
-                    margin: $small-size;
+                    margin-left: $small-size;
+                    margin-right: $small-size;
                 }
 
                 @include modifier(large-only) {
