--- a/index.scss
+++ b/index.scss
@@ -2,6 +2,7 @@
 @import './mixins.scss';
 
 @import './headers.scss';
+@import './books.scss';
 @import './breadcrumb.scss';
 @import './image-grid.scss';
 @import './info-grid.scss';
