--- a/index.css
+++ b/index.css
@@ -342,6 +342,7 @@ img {
 }
 .image-grid .image {
   height: 100%;
+  cursor: pointer;
 }
 @media only screen and (max-width: 1000px) {
   .image-grid .image {
