--- a/index.css
+++ b/index.css
@@ -1,12 +1,17 @@
 .header {
   height: 42px;
-  background-color: #111827;
   color: whitesmoke;
 }
 .header .banner {
+  background-color: #111827;
   display: grid;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin: 0;
+  width: 100vw;
   height: inherit;
-  max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
   font-size: small;
@@ -94,8 +99,14 @@
 
 .subheader {
   height: 62px;
+  margin-top: 20vh;
   font-size: small;
   color: #111827;
+}
+@media only screen and (max-width: 1000px) {
+  .subheader {
+    margin-top: 10vh;
+  }
 }
 .subheader .utility-bar {
   height: inherit;
@@ -355,6 +366,11 @@ img {
 .image-grid__vertical {
   display: grid;
   row-gap: 32px;
+}
+.image-grid__vertical img {
+  border-color: lightgrey;
+  border-width: 1px;
+  border-style: solid;
 }
 
 .info-grid {
@@ -650,6 +666,32 @@ vr {
   .main-matter {
     max-width: 650px;
   }
+}
+
+.container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 20%;
+  overflow: hidden;
+}
+.container img {
+  width: 100vw;
+  margin-top: -300px;
+}
+@media only screen and (max-width: 1000px) {
+  .container img {
+    display: none;
+  }
+}
+.container .no-offset {
+  margin-top: 0;
+}
+
+video {
+  width: 100vw;
+  margin-top: -300px;
 }
 
 .footer {
